--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,7 +28,7 @@ $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
-$white-color: #95194b06 !default;
+$white-color: #fcf9fa !default;
 $black-color: #000000 !default;
 
 
